# nn

./: Cargo.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
arkanoid/game/: Cargo.toml
arkanoid/game/src/: game.rs  lib.rs
arkanoid/game_web/src/: drawer.rs  game.rs  lib.rs
arkanoid/game_web/static/: index.css  index.html
autograd/: Cargo.toml
autograd/benches/: network_bench.rs  val_bench.rs
autograd/src/: layer.rs  lib.rs  mlp.rs  network.rs  neuron.rs  pool.rs  utils.rs  val.rs
autograd/src/ops/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  pow.rs  sub.rs  tanh.rs
core/autograd/: Cargo.toml  README.md
core/autograd/src/: lib.rs  val.rs
core/network/: Cargo.toml
core/network/benches/: network_bench.rs
core/network/src/: lib.rs  network.rs  neuron.rs  utils.rs
digits/: Cargo.toml  README.md
digits/benches/: train_bench.rs
digits/data/: Cargo.toml  README.md
digits/data/canvas_digits/: README.md  t10k-labels-idx1-ubyte
digits/data/src/: data.rs  data_aug.rs  lib.rs  utils.rs
digits/data_utils/src/: data.rs  data_aug.rs  dump.rs  lib.rs  mnist.rs  mnistify.rs  padding.rs
digits/dfdx/train/: Cargo.toml
digits/dfdx/train/models/conv-784-32C3-32C3-32C5S2P2-64C3-64C3-64C5S2P2-128-10/: README.md  mnist.npz
digits/dfdx/train/models/conv-784-64C3-64C3-64C5S2P2-128C3-128C3-128C5S2P2-256-10/: README.md
digits/dfdx/train/src/: data.rs  data_aug.rs  deform.rs  main.rs  model_type.rs  test.rs  train.rs  utils.rs
digits/digits_infer_web/: Cargo.toml  package-lock.json  package.json  webpack.config.js
digits/digits_infer_web/js/: canvas.js  drawing.js  index.js  recognition.js  scaling.js
digits/digits_infer_web/src/: lib.rs  model.rs  recognition.rs
digits/digits_infer_web/static/: index.html
digits/digits_train/: Cargo.toml
digits/digits_train/benches/: train_bench.rs
digits/digits_train/src/: image.rs  test.rs
digits/digits_train_runner/: Cargo.toml
digits/digits_train_runner/src/: main.rs
digits/infer_web/: Cargo.toml  package-lock.json  package.json
digits/infer_web/js/: canvas.js  clear.js  recognition.js  scaling.js
digits/infer_web/static/: index.html
digits/models/: digits-784-30-10.nm
digits/models/digits-784-100-10/: README.md  digits-784-100-10-epoch-1 copy.nm
digits/models/digits-784-100-30-10/: README.md  digits-784-100-30-10-epoch-1.nm  digits-784-100-30-10-epoch-3.nm
digits/models/digits-784-200-80-10/: README.md  digits-784-200-80-10-epoch-2-error-0.06.nm
digits/models/digits-784-30-10/: README.md
digits/nn/infer/: Cargo.toml
digits/nn/train/: Cargo.toml
digits/nn/train_runner/: .gitignore  Cargo.toml
digits/src/: lib.rs  main.rs  test.rs  utils.rs
digits/src/mnist/: images_it.rs
digits/src/testing/: mod.rs
digits/src/train/: mod.rs  plot.rs  utils.rs
digits/src/training/: mod.rs  plot.rs  utils.rs
digits_runner/: Cargo.toml
digits_runner/models/digits-784-100-10/: digits-784-100-10-epoch-2.nm  digits-784-100-10-epoch-3.nm
digits_runner/models/digits-784-200-80-10/: digits-784-200-80-10-epoch-3-error-0.05.nm  digits-784-200-80-10-epoch-4-error-0.05.nm
digits_runner/models/digits-784-30-10/: digits-784-30-10-epoch-1.nm
digits_runner/src/: main.rs
experiments/arkanoid/: README.md
experiments/arkanoid/game_web/: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
experiments/arkanoid/game_web/src/: canvas_drawer.rs  game.rs  lib.rs
experiments/arkanoid/game_web/src/utils/: canvas.rs
experiments/digits/: README.md
experiments/digits/data_utils/: Cargo.toml
experiments/digits/data_utils/src/: data_aug.rs  main.rs  utils.rs
experiments/digits/dfdx/train/: Cargo.toml
experiments/digits/dfdx/train/models/conv-784-32C3-32C3-32C5S2P2-64C3-64C3-64C5S2P2-128-10-sets-2/: README.md  mnist.npz
experiments/digits/dfdx/train/models/conv-784-32C3-MP2-64C3-64C3-MP2-100-10/: README.md
experiments/digits/dfdx/train/src/: main.rs  model_type.rs  train.rs  utils.rs
experiments/digits/nn/train/: Cargo.toml
experiments/digits/nn/train/src/: image.rs  utils.rs
experiments/digits/nn/train/src/train/: utils.rs
network/src/: layer.rs  network.rs  utils.rs
src/: main.rs  plot.rs  utils.rs  val.rs
src/digits_model/: mod.rs  utils.rs
src/digits_model/mnist/: mod.rs  (+2 more)
src/ops/: add.rs  mod.rs  mul.rs  neg.rs  tanh.rs
(+95 files in other folders)
