[workspace]
members = [
    "core/autograd",
    "core/network",

    "experiments/digits/infer_web",
    "experiments/digits/nn/infer",
    "experiments/digits/nn/train",
    "experiments/digits/nn/train_runner",
    "experiments/digits/dfdx/infer",
    "experiments/digits/dfdx/train",

    "experiments/arkanoid/game",
    "experiments/arkanoid/game_web",
]
