[package]
name = "digits_infer_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
network = { path = "../../core/network" }
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
wee_alloc = "0.4.5"
once_cell = "1.17.1"

[dependencies.web-sys]
version = "0.3.61"
features = ["console"]
