[package]
name = "infer_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# nn_infer = { path = "../nn/infer" }
dfdx_infer = { path = "../dfdx/infer" }

wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.61"
features = ["console"]
