[package]
name = "data_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
dfdx = { version = "0.11.2", features = ["numpy"] }
rand = "0.8.5"
moving-least-squares = "0.1.0"
moving-least-squares-image = "0.1.0"
image = "0.23.14"
imageproc = "0.22.0"
indicatif = "0.17.3"
glob = "0.3.1"
byteorder = "1.4.3"
