[package]
name = "dfdx_train"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpu = ["dfdx/cuda"]

[dependencies]
data_utils = { path = "../../data_utils" }
dfdx = { version = "0.11.2", features = ["numpy"] }
indicatif = "0.17.3"
rand = "0.8.5"
zip = { version = "0.6.2", default-features = false }
chrono = "0.4.24"
