[package]
name = "nn_train"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "train_bench"
harness = false

[dev-dependencies]
criterion = "0.4.0"

[dependencies]
autograd = { path = "../../../../core/autograd" }
network = { path = "../../../../core/network" }
plotters = "0.3.4"
image = "0.24.6"
